# log-collector

./: .env  README.md  docker-compose.yml  test.csv
api/: Cargo.toml
api/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
server/: Cargo.toml
server/migrations/2019-12-02-091346_create_logs/: up.sql
server/src/: db.rs  handlers.rs  main.rs
