[package]
name = "cli"
version = "0.1.0"
authors = ["ng3rdstmadgke <ng3rdstmadgke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
reqwest = "0.9"
csv = "1"
serde = "1"
serde_json = "1"
api = { path = "../api"}
chrono = {features = ["serde"], version = "0.4"}
